--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,48 +19,48 @@
             android:orientation="vertical"
             android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/teamA"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TEAM A"
-            android:gravity="center"
-            android:textSize="24sp"/>
-        <TextView
-            android:id="@+id/PointA"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="3"
-            android:gravity="center"
-            android:textSize="48sp"/>
+            <TextView
+                android:id="@+id/teamA"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TEAM A"
+                android:gravity="center"
+                android:textSize="24sp"/>
+            <TextView
+                android:id="@+id/PointA"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:gravity="center"
+                android:textSize="48sp"/>
 
-        <Button
-            android:id="@+id/button3A"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="+3 POINTS"
-            android:layout_margin="16dp"/>
+            <Button
+                android:id="@+id/button3A"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="+3 POINTS"
+                android:layout_margin="16dp"/>
 
-        <Button
-            android:id="@+id/button2A"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="+2 POINTS"
-            android:layout_margin="16dp"/>
+            <Button
+                android:id="@+id/button2A"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="+2 POINTS"
+                android:layout_margin="16dp"/>
 
-        <Button
-            android:id="@+id/button1A"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="FREE THROW"
-            android:layout_margin="16dp"/>
+            <Button
+                android:id="@+id/button1A"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="FREE THROW"
+                android:layout_margin="16dp"/>
         </LinearLayout>
-        <view
+        <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:background="#eeeeee">
 
-        </view>
+        </View>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -80,7 +80,7 @@
                 android:id="@+id/PointB"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="3"
+                android:text="0"
                 android:gravity="center"
                 android:textSize="48sp"/>
 
@@ -107,6 +107,7 @@
         </LinearLayout>
     </LinearLayout>
     <Button
+        android:id="@+id/resetpoint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Reset"
@@ -114,4 +115,121 @@
         android:layout_centerHorizontal="true">
 
     </Button>
+</RelativeLayout><?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+tools:context=".MainActivity">
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    tools:layout_editor_absoluteX="167dp"
+    tools:layout_editor_absoluteY="127dp">
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1">
+
+        <TextView
+            android:id="@+id/teamA"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TEAM A"
+            android:gravity="center"
+            android:textSize="24sp"/>
+        <TextView
+            android:id="@+id/PointA"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:gravity="center"
+            android:textSize="48sp"/>
+
+        <Button
+            android:id="@+id/button3A"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="+3 POINTS"
+            android:layout_margin="16dp"/>
+
+        <Button
+            android:id="@+id/button2A"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="+2 POINTS"
+            android:layout_margin="16dp"/>
+
+        <Button
+            android:id="@+id/button1A"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="FREE THROW"
+            android:layout_margin="16dp"/>
+    </LinearLayout>
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="#eeeeee">
+
+    </View>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1">
+
+
+
+        <TextView
+            android:id="@+id/teamB"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TEAM B"
+            android:gravity="center"
+            android:textSize="24sp"/>
+        <TextView
+            android:id="@+id/PointB"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:gravity="center"
+            android:textSize="48sp"/>
+
+        <Button
+            android:id="@+id/button3B"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="+3 POINTS"
+            android:layout_margin="16dp"/>
+
+        <Button
+            android:id="@+id/button2B"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="+2 POINTS"
+            android:layout_margin="16dp"/>
+
+        <Button
+            android:id="@+id/button1B"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="FREE THROW"
+            android:layout_margin="16dp"/>
+    </LinearLayout>
+</LinearLayout>
+<Button
+    android:id="@+id/resetpoint"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Reset"
+    android:layout_alignParentBottom="true"
+    android:layout_centerHorizontal="true">
+
+</Button>
 </RelativeLayout>
